# ComfyUI-HyMotion

./: .gitignore  .tracking  README.md  Text_Video-To-3DMotion.json  __init__.py  fbx_to_smplh_converter.py  gpu_mhr_to_smpl.py  hymotion_pose_adapter.py  nodes_2d_preview.py  nodes_3d_viewer.py  nodes_extra.py  nodes_mhr.py  nodes_modular.py  nodes_preview.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
assets/dump_wooden/: joint_names.json
assets/templates/: index_wooden_static.html
hymotion/: __init__.py
hymotion/network/: __init__.py  attention.py  bricks.py  encoders.py  hymotion_mmdit.py  modulate_layers.py  positional_encoding.py  token_refiner.py
hymotion/pipeline/: __init__.py  body_model.py  motion_diffusion.py
hymotion/prompt_engineering/: __init__.py  model_constants.py  prompt_rewrite.py
hymotion/tools/: compare_fbx.py  compare_skeletons.py  debug_fbx_transforms.py  fbx_math_check.py  g3_diag.py  g3_diag2.py  g3_drift_diag.py  g3_e2e_diag.py  g3_pos_diag.py  g3f_hierarchy.txt  g9_hierarchy.txt  inspect_g3.py
hymotion/utils/: __init__.py  bake_fbx.py  configs.py  data_types.py  downloader.py  encoder.py  geometry.py  loaders.py  misc.py  motion_process.py  path.py  presets.py  (+7 more)
tests/: batch_test.py  check_src_h.py  compare_trajectories.py  debug_extraction.py  debug_fbx.py  debug_rig.py  debug_sync.py  diagnose_mapping_detail.py  generate_all_fbx.py  inspect_npz.py  inspect_problem.py  test_retarget_regression.py
web/: viewer3d.js
workflows/: HunyuanMotion.json  HyMotion_MotionChaining.json  Text_Video-To-3DMotion.json
(+15 files in other folders)
